--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.4.3",
     "element-ui": "^2.13.0",
     "vue": "^2.6.10",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
